--- a/juthi.Rmd
+++ b/juthi.Rmd
@@ -568,10 +568,29 @@ demographics <- read_csv(here("demographics","demographics.csv")) %>%
 
 nta_info <- demographics %>%
   drop_na(`NTA Type`) %>%
-  select(`NTA Type`, GeoID, Name) %>%
-   filter(!substr(GeoID, 1, 2) == "SI") %>%
+  #select(`NTA Type`, GeoID, Name) %>%
+  filter(!substr(GeoID, 1, 2) == "SI") %>%
   rename(nta_id = GeoID) %>%
   rename(nta_type = `NTA Type`)
+
+nta_info <- nta_info %>% dplyr::select(nta_type, nta_id, Name)
+
+
+
+
+
+a <- read_sf("clean_data/nyc_data.shp")
+head(a)
+
+a_merged <- merge(a, nta_info, by="nta_id")
+
+a_merged %>% write_sf("clean_data/nyc_data.shp")
+
+b <- read_csv("clean_data/nyc_names.csv")
+
+b_merged <- merge(b, nta_info, by="nta_id")
+b_merged %>% relocate(geometry, .after=Name) %>%
+  write_csv("clean_data/nyc_names.csv")
 ```
 
 
